--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
   height: 100vh;
   /* cursor: default; */
   scroll-behavior: smooth;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* background-color: transparent !important; */
   /* user-select: none;
   -webkit-user-select: none;
